--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,10 @@ body{
 .player_one{
 	background-color:white;
 	border:1px solid black;
-	border-radius:3px;
-    padding:10px;
+	border-radius:4px;
+}
+.player_one ul{
+	list-style-type:none;
 }
 .player_one a{
 	text-decoration:none;
@@ -20,7 +22,7 @@ h1,h3,h2{
     padding:10px;
 	width:325px;
 	margin:auto;
-	border-radius:3px;
+	border-radius:4px;
 	border:1px solid black;
 }
 audio{
